--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="buttons">
         <button id="start" type="button">Start</button>
         <button id="pause" type="button">Pause</button>
-        <button id="stop" type="button">Stop</button>
+        <button id="reset" type="button">Reset</button>
     </div>
     </body>
 </html>
